--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.1.1",
     "express": "^4.18.2",
+    "http-status": "^1.7.3",
     "mongoose": "^7.2.2"
   }
 }
