--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "dotenv": "^16.1.1",
     "express": "^4.18.2",
     "http-status": "^1.7.3",
-    "mongoose": "^7.2.2"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^7.2.2",
+    "zod": "^3.22.4"
   }
 }
