--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   "author": "udoy",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.1",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.0.4"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.1.1",
     "express": "^4.18.2",
